--- a/package.json
+++ b/package.json
@@ -21,5 +21,11 @@
   "homepage": "https://github.com/yoh1496/personium-scripts#readme",
   "devDependencies": {
     "eslint": "^7.11.0"
+  },
+  "dependencies": {
+    "axios": "^0.20.0",
+    "commander": "^6.1.0",
+    "https-proxy-agent": "^5.0.0",
+    "tunnel": "0.0.6"
   }
 }
