--- a/package.json
+++ b/package.json
@@ -5,9 +5,13 @@
   "bin": {
     "personium-scripts": "index.js"
   },
-  "main": "index.js",
+  "main": "src/index.ts",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha -r ts-node/register test/**/*.ts",
+    "debug": "ts-node src/index.ts",
+    "clean": "rimraf dist/*",
+    "build": "tsc",
+    "start": "node dist/index.js"
   },
   "repository": {
     "type": "git",
@@ -20,12 +24,25 @@
   },
   "homepage": "https://github.com/yoh1496/personium-scripts#readme",
   "devDependencies": {
-    "eslint": "^7.11.0"
+    "@dicebear/avatars": "^4.5.4",
+    "@dicebear/avatars-human-sprites": "^4.5.4",
+    "@types/node": "^14.14.35",
+    "@types/xml2js": "^0.4.8",
+    "@typescript-eslint/eslint-plugin": "^4.18.0",
+    "@typescript-eslint/parser": "^4.18.0",
+    "eslint": "^7.22.0",
+    "eslint-config-prettier": "^8.1.0",
+    "npm-run-all": "^4.1.5",
+    "prettier": "^2.2.1",
+    "rimraf": "^3.0.2",
+    "ts-node": "^9.1.1",
+    "typescript": "^4.2.3"
   },
   "dependencies": {
     "axios": "^0.20.0",
     "commander": "^6.1.0",
     "https-proxy-agent": "^5.0.0",
-    "tunnel": "0.0.6"
+    "tunnel": "0.0.6",
+    "xml2js": "^0.4.23"
   }
 }
